Improve equals/hashcode in POJO classes